Animation fix on mobile

--- a/app.css
+++ b/app.css
@@ -7407,7 +7407,7 @@
         .card-funding img {
             width: 70%;
             left: 20%;
-            transition: 0.16s ease;
+            transition: 0.6s ease;
         } 
     }
 
